# GraphicEngineOpenGL

./: .gitignore  CMakeLists.txt  README.md
include/: EBO.hpp  Texture.h  VAO.hpp  VBO.hpp  shaderClass.hpp
include/glad/: glad.h
lib/: glfw3.lib
ressources/shaders/: default.frag  default.vert
src/: EBO.cpp  VAO.cpp  VBO.cpp  glad.c  main.cpp  shaderClass.cpp  texture.cpp
